Added users endpoints
