# routes/usersRoute.js
@@ -3,8 +3,8 @@ const usersController = require('../controllers/usersController')
 
 router.get('/', usersController.getAll)
 router.get('/:id', usersController.getById)
-// router.post('/', usersController.createUser)
-// router.put('/:id', usersController.updateUser)
-// router.delete('/:id', usersController.deleteUser)
+router.post('/', usersController.createUser)
+router.put('/:id', usersController.updateUser)
+router.delete('/:id', usersController.deleteUser)
 
 module.exports = router
